# deep-activity-recognition

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
models/: B1Model.pth
models/baseline1/: B1Model.pth
models/baseline1/checkpoints/best/: B1Model_best_epoch_1.pth  B1Model_best_epoch_2.pth
models/baseline1/checkpoints/epochs/: B1Model_epoch_1.pth  B1Model_epoch_2.pth  B1Model_epoch_3.pth  B1Model_epoch_4.pth  B1Model_epoch_5.pth  B1Model_epoch_6.pth  B1Model_epoch_7.pth  B1Model_epoch_8.pth  B1Model_epoch_9.pth
models/baseline_1/checkpoints/best/: B1Model_best_acc.pth  (+1 more)
scripts/: download_dataset.sh  run_app.sh
src/baselines/: baseline1.py
src/controllers/: __init__.py  base_controller.py  data_controller.py  model_controller.py  project_controller.py  train_controller.py
src/data_processing/: __init__.py  annot_loader.py  annot_loading.py  box_info.py  feature_extraction.py
src/enums/: __init__.py  activity.py  baselines.py  model.py  model_results.py  optimizer.py  train.py
src/models/: __init__.py
src/models/enums/: __init__.py  activity.py  asset_enum.py  data.py  model.py  path_enum.py  response_enums.py  train.py
src/models/pydantic_models/: data_repr.py
src/pydantic_models/: __init__.py  data_repr.py
src/routes/: ai.py  base.py  data.py
src/routes/schemas/: __init__.py  ai.py
src/stores/baselines/: __init__.py  baseline1.py
src/utils/: config_utils.py  log_utils.py  logging_utils.py  model_utils.py  path_utils.py  plotting_utils.py  stream_utils.py
(+33 files in other folders)
